feat: Implement Wakatime integration with activity tracking and enhance environment configuration

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         <category android:name="android.intent.category.DEFAULT"/>
         <category android:name="android.intent.category.BROWSABLE"/>
         <data android:scheme="kawatime"/>
+        <data android:scheme="exp+kawatime"/>
       </intent-filter>
     </activity>
   </application>
