--- a/android/build.gradle
+++ b/android/build.gradle
@@ -27,6 +27,12 @@ allprojects {
       url(reactNativeAndroidDir)
     }
 
+        tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
+        kotlinOptions {
+            jvmTarget = JavaVersion.VERSION_17.toString()
+        }
+    }
+
     google()
     mavenCentral()
     maven { url 'https://www.jitpack.io' }
