--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@expo/server": "^0.6.2",
     "@tanstack/eslint-plugin-query": "^5.74.7",
     "@types/react": "~19.0.10",
     "eslint": "^9.25.0",
