--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
+    "@tanem/react-nprogress": "^5.0.55",
     "@tanstack/react-query": "^5.76.0",
     "@tanstack/react-query-devtools": "^5.76.0",
+    "@uidotdev/usehooks": "^2.4.1",
     "deepmerge": "^4.3.1",
     "expo": "~53.0.9",
     "expo-blur": "~14.1.4",
@@ -41,6 +43,7 @@
     "react-native": "0.79.2",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-paper": "^5.14.1",
+    "react-native-paper-dates": "^0.22.42",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
